--- a/pages/tiktok.html
+++ b/pages/tiktok.html
@@ -23,6 +23,7 @@
     <!-- Custom CSS Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css">
+    <script async src="https://www.tiktok.com/embed.js"></script>
 
 
 </head>
@@ -32,8 +33,7 @@
     <div id="navbar"></div>
 
     <div class="container">
-    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@autocheckliste/video/7290132177667280160" data-video-id="7290132177667280160" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@autocheckliste" href="https://www.tiktok.com/@autocheckliste?refer=embed">@autocheckliste</a> <p></p> <a target="_blank" title="♬ CLUB DRIFT - DM 90" href="https://www.tiktok.com/music/CLUB-DRIFT-7227128578084227074?refer=embed">♬ CLUB DRIFT - DM 90</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>    </div>
-    <script>
+        https://www.tiktok.com/@autocheckliste/video/7290518697595145505?is_from_webapp=1&sender_device=pc&web_id=7290503135515297313    <script>
         $(document).ready(function () {
                 $("#navbar").load("/pages/navi.html");
         });
