add info under construction

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <section class="featured featured-section">
                     <div class="">
                         <div class="card-body">
-                            <p class="lead" data-i18n="index.title">Your Ancient Auto Alchemist :)</p>
+                            <p class="lead" data-i18n="index.title">Our website is under construction, but we promise it's going to be worth the wait! 🚧💻</p>
                             <p data-i18n="index.subTitle">Welcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.</p>
                             <div class="text-center">
                                 <a href="/pages/basic_checklist.html" class="btn btn-danger" data-i18n="index.btn.basic">Basic Checklist</a>
