--- a/pages/resources.html
+++ b/pages/resources.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-   
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-     <!-- Google tag (gtag.js) -->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
-     <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
- 
-     gtag('config', 'G-HVQPSX94JX');
-     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-HVQPSX94JX');
+    </script>
 
     <title>Test Drive Checklist</title>
     <!-- Include Bootstrap CSS -->
@@ -39,44 +39,89 @@
             <li><a href="#windshield">Windshield (chips or cracks?)</a></li>
             <li><a href="#headlights">Headlights (foggy?)</a></li>
             <li><a href="#inspection-sticker">Inspection Sticker Current?</a></li>
-            <li><a href="#rusty-brake-rotors">Rusty Brake Rotors</a></li>
+            <li><a href="#rusty-brake-rotors">Rusty Brake Rotors?</a></li>
+            <li><a href="#tire-Tred">Tire Tread</a></li>
+            <li><a href="#tire-Tred">All 4 tires/wheels the same?</a></li>
+            <li><a href="#tire-Tred">Wheel damage?</a></li>
+
         </ul>
 
 
 
         <div id="scratches-dents">
             <h2>Scratches and Dents</h2>
-<div>When conducting a car inspection, it's crucial not to assess the vehicle when it's wet, as it can conceal certain imperfections. Additionally, be sure to check for holes and dents, as these issues can have a significant impact on the car's value and should be considered during negotiations. Moreover, it's important to avoid underestimating the difficulty and cost of fixing scratches, especially when dealing with special paint colors that may not be readily available for new cars. Highlighting these factors can make strong points for negotiation when buying or selling a vehicle.</div>        </div>
+            <div>When conducting a car inspection, it's crucial not to assess the vehicle when it's wet, as it can
+                conceal certain imperfections. Additionally, be sure to check for holes and dents, as these issues can
+                have a significant impact on the car's value and should be considered during negotiations. Moreover,
+                it's important to avoid underestimating the difficulty and cost of fixing scratches, especially when
+                dealing with special paint colors that may not be readily available for new cars. Highlighting these
+                factors can make strong points for negotiation when buying or selling a vehicle.</div>
+        </div>
 
         <div id="windshield">
             <h2>Windshield (chips or cracks?)</h2>
-            <div>During a thorough vehicle inspection, it is essential to check the condition of the glass surfaces, specifically for any chips or cracks. These imperfections not only compromise the aesthetics of the vehicle but also pose a safety risk.</div>
+            <div>During a thorough vehicle inspection, it is essential to check the condition of the glass surfaces,
+                specifically for any chips or cracks. These imperfections not only compromise the aesthetics of the
+                vehicle but also pose a safety risk.</div>
         </div>
 
         <div id="headlights">
             <h2>Headlights (foggy?)</h2>
-            <div>Checking the condition of the headlights is a critical part of a vehicle inspection. One aspect to consider is whether the headlights appear foggy or hazy, which can be caused by oxidation and significantly affect their effectiveness and the overall aesthetics of the car. Restoring or replacing them can become a costly necessity, emphasizing the importance of this consideration during a vehicle assessment.</div>
+            <div>Checking the condition of the headlights is a critical part of a vehicle inspection. One aspect to
+                consider is whether the headlights appear foggy or hazy, which can be caused by oxidation and
+                significantly affect their effectiveness and the overall aesthetics of the car. Restoring or replacing
+                them can become a costly necessity, emphasizing the importance of this consideration during a vehicle
+                assessment.</div>
         </div>
 
         <div id="inspection-sticker">
             <h2>Inspection Sticker Current?</h2>
-<div>
-    Confirm the validity of the inspection sticker. Many regions implement a grace period, such as a six-month tolerance limit, allowing for flexibility beyond the stated expiration date.
-</div>        </div>
+            <div>
+                Confirm the validity of the inspection sticker. Many regions implement a grace period, such as a
+                six-month tolerance limit, allowing for flexibility beyond the stated expiration date.
+            </div>
+        </div>
 
         <div id="rusty-brake-rotors">
             <h2>Rusty Brake Rotors</h2>
-<div>
-    Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period. This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a reduced price. Evaluating the condition of the brake rotors can provide insights into the car's recent activity and potential negotiation leverage for the buyer.
-</div>        </div>
+            <div>
+                Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period.
+                This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a
+                reduced price. Evaluating the condition of the brake rotors can provide insights into the car's recent
+                activity and potential negotiation leverage for the buyer.
+            </div>
+        </div>
+
+        <div id="tired-tred">
+            <h2>The Wheels</h2>
+            <div>
+                Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period.
+                This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a
+                reduced price. Evaluating the condition of the brake rotors can provide insights into the car's recent
+                activity and potential negotiation leverage for the buyer.
+            </div>
+        </div>
+        <div id="wheel-inspection">
+            <h2>Wheel Inspection</h2>
+            <div>Ensuring that the wheels are uniform, in good condition, and have sufficient tread depth is a
+                foundational step in making a wise purchase. Begin by scrutinizing the wheels for uniformity. Ideally,
+                all wheels should match in size, type, and style. Discrepancies in the wheels can result in uneven tire
+                wear, impacting the car's handling and stability. Thoroughly assess the condition of the rims, keeping
+                an eye out for any signs of damage or irregularities. Although curb rash and paint chips may seem
+                cosmetic, they can influence the wheel's appearance and structural integrity over time. Equally
+                essential is measuring the tread depth. A simple way to do this is by using a common coin to gauge the
+                remaining tread life. If the tread does not reach the top of a coin's head, it's a strong indication
+                that it's time to consider tire replacement. Additionally, many tires feature built-in tread wear
+                indicators.</div>
+        </div>
     </div>
 
     <script>
-    $(document).ready(function () {
+        $(document).ready(function () {
             $("#navbar").load("/pages/navi.html");
-    });
+        });
     </script>
-    
+
 
     <script src="/js/drive.js"></script>
     <script src="/js/common.js"></script>
