add resources wiki in en

--- a/pages/navi.html
+++ b/pages/navi.html
@@ -20,6 +20,10 @@
                         </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link dynamic-href" href="/pages/resources.html" data-i18n="nav.resource">RESOURCES
+                        </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/pages/about.html" data-i18n="nav.contact">CONTACT</a>
                 </li> 
        
