--- a/pages/resources.html
+++ b/pages/resources.html
@@ -40,9 +40,9 @@
             <li><a href="#headlights">Headlights (foggy?)</a></li>
             <li><a href="#inspection-sticker">Inspection Sticker Current?</a></li>
             <li><a href="#rusty-brake-rotors">Rusty Brake Rotors?</a></li>
-            <li><a href="#tire-Tred">Tire Tread</a></li>
-            <li><a href="#tire-Tred">All 4 tires/wheels the same?</a></li>
-            <li><a href="#tire-Tred">Wheel damage?</a></li>
+            <li><a href="#wheel-inspection">Tire Tread</a></li>
+            <li><a href="#wheel-inspection">All 4 tires/wheels the same?</a></li>
+            <li><a href="#wheel-inspection">Wheel damage?</a></li>
 
         </ul>
 
@@ -92,15 +92,6 @@
             </div>
         </div>
 
-        <div id="tired-tred">
-            <h2>The Wheels</h2>
-            <div>
-                Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period.
-                This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a
-                reduced price. Evaluating the condition of the brake rotors can provide insights into the car's recent
-                activity and potential negotiation leverage for the buyer.
-            </div>
-        </div>
         <div id="wheel-inspection">
             <h2>Wheel Inspection</h2>
             <div>Ensuring that the wheels are uniform, in good condition, and have sufficient tread depth is a
