add more resources, fix translations

--- a/pages/navi.html
+++ b/pages/navi.html
@@ -28,7 +28,14 @@
                 </li> 
        
                 <li class="nav-item">
-                    <a class="nav-link" id="languageSwitch" href="#">en</a>
+                    <a class="nav-link" href="#">
+                        <img src="/imgs/united-kingdom.png" alt="English Flag" class="language-flag" data-lang="en">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <img src="/imgs/germany-flag.png" alt="German Flag" class="language-flag" data-lang="de">
+                    </a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Diagnostic Tools</a>
@@ -38,7 +45,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
-                </li> 
+                </li>  -->
             </ul>
         </div>
     </div>
