--- a/pages/resources.html
+++ b/pages/resources.html
@@ -44,6 +44,12 @@
             <li><a href="#wheel-inspection">All 4 tires/wheels the same?</a></li>
             <li><a href="#wheel-inspection">Wheel damage?</a></li>
 
+            <li><a href="#rips-on-seats">Rips on seats?</a></li>
+            <li><a href="#car-options">Car Options (Navi, sunroof, etc)</a></li>
+            <li><a href="#headliner">Headliner (saggy?)</a></li>
+            <li><a href="#wheel-inspection">Automatic/Manual</a></li>
+            <li><a href="#wheel-inspection">Steering wheel (worn?)</a></li>
+            <li><a href="#wheel-inspection">Wheel damage?</a></li>
         </ul>
 
 
