--- a/pages/basic_checklist.html
+++ b/pages/basic_checklist.html
@@ -236,6 +236,7 @@
 
 
     <script src="/js/basic.js"></script>
+    <script src="/js/common.js"></script>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
